<resources>
    <string name="app_name">PopMovies</string>
    <string name="query_mode_label">Search Mode</string>
    <string name="query_mode_default" translatable="false">popular</string>
    <string name="query_mode_key" translatable="false">query_mode</string>
    <string name="trailer">Trailer</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="progress_message">Please wait&#8230;</string>
    <string name="no_favorites">No favorites!</string>
    <string name="by_author">By: %1$s</string>
    <string name="average_note" translatable="false">%.1f / 10</string>
    <string name="grid_view_error">There are no movies to display. Please, change the query mode in Settings.</string>
    <string name="grid_view_error_no_connection">There is no internet connection. You can check you favorites collection, though.</string>
    <string name="grid_view_error_needs_api_key">There are no movies to display. Please, check for an updated version of PopMovies.</string>
    <string name="remove_from_favorites">Removed from the favorites list</string>
    <string name="delete_movie_error">Could not delete this movie from the favorites list</string>
    <string name="added_as_favorite">Movie added as a favorite</string>
    <string name="save_movie_error">Could not save this movie as a favorite</string>

    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorites">Favorites</string>
    <string name="upcoming">Upcoming</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="query_mode_popular" translatable="false">popular</string>
    <string name="query_mode_top_rated" translatable="false">top_rated</string>
    <string name="query_mode_favorites" translatable="false">favorites</string>
    <string name="query_mode_upcoming" translatable="false">upcoming</string>

    <string name="release_date">Release Date: </string>
    <string name="average">Average: </string>

    <string name="add_favorite">Add as favorite</string>
    <string name="share">Share</string>
    <string name="remove_favorite">Remove from favorites</string>

    <string name="pref_status" translatable="false">pref_status</string>

    <string name="copyright" translatable="false">©gziolle, 2017</string>

    <string name="third_parties" translatable="false">Third Parties:</string>

    <string name="picasso_link" translatable="false"><a href="http://square.github.io/picasso/">Picasso</a></string>
    <string name="fab_link" translatable="false"><a href="https://github.com/futuresimple/android-floating-action-button">Floating Action Button</a></string>
    <string name="the_movie_db_link" translatable="false"><a href="https://www.themoviedb.org/documentation/api">The Movie DB</a></string>

    <string name="back">Back</string>

    <string name="share_text">Watch a trailer for %1$s: </string>

    <string name="transition_poster" translatable="false">translation_poster</string>

    <string name="formatted_date">MMMMM dd, yyyy</string>

    <string-array name="query_mode_options">
        <item>Popular</item>
        <item>Highest Rated</item>
        <item>Favorites</item>
        <item>Upcoming</item>
        <!--<item>Upcoming</item>!-->
    </string-array>

    <string-array name="query_mode_values">
        <item>popular</item>
        <item>top_rated</item>
        <item>favorites</item>
        <item>upcoming</item>
    </string-array>
</resources>
