<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/movie_options"
        android:checkableBehavior="single">
        <item
            android:id="@+id/popular"
            android:icon="@drawable/ic_whatshot"
            android:title="@string/popular" />
        <item
            android:id="@+id/top_rated"
            android:icon="@drawable/ic_poll"
            android:title="@string/top_rated" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
    </group>

    <group
        android:id="@+id/general_options"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_help"
            android:title="@string/about" />
    </group>

</menu>